add biclustpl sources

--- a/reports/index.html
+++ b/reports/index.html
@@ -7,7 +7,7 @@ title: Patrick O. Perry - Reports
 <section class="bibliography">
   <ul>
     <li>
-      <a href="http://arxiv.org/abs/1504.04941">Fast Moment-Based Estimation for Hierarchical Models</a>.
+      <a href="http://arxiv.org/abs/1504.04941">Fast moment-based estimation for hierarchical models</a>.
       Submitted.
       <ul>
         <li>R Package: <a href="http://cran.r-project.org/web/packages/mbest/index.html">mbest</a>
@@ -23,6 +23,10 @@ title: Patrick O. Perry - Reports
       <a href="http://arxiv.org/abs/1206.6927">Consistent biclustering</a>.
       With C. J. Flynn.
       Submitted.
+      <ul>
+        <li>R Package (in development, not on CRAN): <a href="http://github.com/patperry/biclustpl">biclustpl</a>
+        <li>Code to Reproduce Figures: <a href="biclustpl/biclustpl-sources.tar.gz">biclustpl-sources.tar.gz</a>
+      </ul>
     </li>
 
     <li>
