update with new lecture materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -75,20 +75,19 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/Village.CSV">Village.CSV</a>
       <li><a href="data/dinners-commute.csv">dinners-commute.csv</a>
     </ul>
-<!--
   <li><a href="lecture/reg-diagnostics.pdf">Nov 23 (1) - Regression Diagnostics</a>
     (<a href="lecture/reg-diagnostics-sol.pdf">Solutions</a>)
     <ul>
-      <li><a href="data/interest-gmat.csv">interest-gmat.csv</a>
-      <li><a href="data/mealsData.csv">mealsData.csv</a>
       <li><a href="data/Village.CSV">Village.CSV</a>
+      <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
   <li><a href="lecture/reg-multiple.pdf">Nov 23 (2) - Multiple Regression, F Tests</a>
     (<a href="lecture/reg-multiple-sol.pdf">Solutions</a>)
     <ul>
-      <li><a href="data/EASTON.CSV">EASTON.CSV</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
+      <li><a href="data/EASTON.CSV">EASTON.CSV</a>
     </ul>
+<!--
   <li><a href="lecture/assoc.pdf">Nov 30 (1) - Association and Causation</a>
     (<a href="lecture/assoc-sol.pdf">Solutions</a>)
 -->
@@ -106,6 +105,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/15742006626d445d80509cbc211d01a21d">Nov 02</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/bbe12d5bdfbc4140bc9795a709256f991d">Nov 09</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/14a9598a02d5407caeeadcd5f3cad3c61d">Nov 16</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/32d1a5c759904ed9bcf65125599e7be91d">Nov 23</a>
 </ul>
 
 
@@ -145,6 +145,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
     </ul>
   <li><a href="hw/hw07.pdf">Homework 7</a>
+    (<a href="hw/hw07sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/retail_sales.csv">retail_sales.csv</a>
@@ -157,14 +158,14 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/PriceToEarnings.CSV">PriceToEarnings.CSV</a>
 -->
     </ul>
-<!--
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
   <li><a href="hw/hw09.pdf">Homework 9</a>
     <ul>
-      <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
       <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
+<!--
+      <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
+-->
     </ul>
   <li><a href="handout/final.pdf">Sample Final</a>
--->
 </ul>
 </main>
