update with lecture materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -87,10 +87,13 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/mealsData.csv">mealsData.csv</a>
       <li><a href="data/EASTON.CSV">EASTON.CSV</a>
     </ul>
-<!--
-  <li><a href="lecture/assoc.pdf">Nov 30 (1) - Association and Causation</a>
+  <li><a href="lecture/reg-multiple2.pdf">Nov 30 (1) - Multiple Regression 2</a>
+    (<a href="lecture/reg-multiple2-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/movies2013.csv">movies2013.csv</a>
+    </ul>
+  <li><a href="lecture/assoc.pdf">Nov 30 (2) - Association and Causation</a>
     (<a href="lecture/assoc-sol.pdf">Solutions</a>)
--->
 </ul>
 
 
@@ -151,6 +154,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/retail_sales.csv">retail_sales.csv</a>
     </ul>
   <li><a href="hw/hw08.pdf">Homework 8</a>
+    (<a href="hw/hw08sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
