--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -109,6 +109,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/bbe12d5bdfbc4140bc9795a709256f991d">Nov 09</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/14a9598a02d5407caeeadcd5f3cad3c61d">Nov 16</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/32d1a5c759904ed9bcf65125599e7be91d">Nov 23</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/74533b06d2d641c697f6c6db39164e751d">Nov 30</a>
 </ul>
 
 
