--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -94,6 +94,9 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/assoc.pdf">Nov 30 (2) - Association and Causation</a>
     (<a href="lecture/assoc-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="http://tylervigen.com/spurious-correlations">Spurious Correlations</a>
+    </ul>
 </ul>
 
 
