update SSD page

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -6,10 +6,27 @@ stylesheet: /css/main.css?v=1
 <main class="wrapper">
 <h1>Statistics for Social Data</h1>
 
+<h2>Handouts and assignments</h2>
+<ul>
+    <li><a href="syllabus.pdf">Syllabus</a>
 <!--
+    <li><a href="project.pdf">Class Project</a>
+    <li><a href="nltk-tutorial.pdf">Tutorial: Computing Word Frequencies in Python</a>
+    <li><a href="hw1.pdf">Homework #1</a>
+-->
+</ul>
+
+<h2>Information for non-Stern students</h2>
+
+Due to school regulations, non-Stern students need consent from the instructor
+to enroll in this course. I am happy to provide this consent. If you are a
+non-Stern student, please send me an e-mail (pperry@stern.nyu.edu) with a few
+sentences describing your prerequisite experience and your reasons for wanting
+to take the course.
 
 <h2>Readings</h2>
 <ul>
+<!--
   <li> Perry and Wolfe (2013), <a href="Perr13.pdf">Point process modelling
       for directed interaction networks</a>.
   <li>Shalizi and Thomas (2011), <a href="Shal11.pdf">Homophily and contagion
@@ -56,26 +73,16 @@ stylesheet: /css/main.css?v=1
       from <cite>Introduction to Information Retrieval</cite>.
   <li>Cluaset, Shalizi, and Newman (2009), <a href="Clau09.pdf">Power-law
       distributions in empirical data</a>.
+-->
   <li>Mosteller and Wallace (1963), <a href="Most63.pdf">Inference in an
       authorship problem</a>.
 </ul>
--->
-
-<h2>Handouts and Assignments</h2>
-<ul>
-    <li><a href="syllabus.pdf">Syllabus</a>
-<!--
-    <li><a href="project.pdf">Class Project</a>
-    <li><a href="nltk-tutorial.pdf">Tutorial: Computing Word Frequencies in Python</a>
-    <li><a href="hw1.pdf">Homework #1</a>
--->
-</ul>
 
 
-<!--
 <h2>Datasets</h2>
 <ul>
     <li><a href="federalist.json"><cite>The Federalist</cite> Papers (federalist.json)</a>
 </ul>
--->
+
+
 </main>
