update citation list

--- a/reports/index.html
+++ b/reports/index.html
@@ -8,7 +8,8 @@ title: Patrick O. Perry - Reports
   <ul>
     <li>
       <a href="http://arxiv.org/abs/1504.04941">Fast moment-based estimation for hierarchical models</a>.
-      Submitted.
+      <cite>Journal of the Royal Statistical Society: Series&nbsp;B (Statistical Methodology)</cite>,
+      Forthcoming 2016.
       <ul>
         <li>R Package: <a href="http://cran.r-project.org/web/packages/mbest/index.html">mbest</a>
         <li>Code to Reproduce Figures: <a href="mhlm/mhlm-sources.tar.gz">mhlm-sources.tar.gz</a>
