--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -8,7 +8,7 @@ stylesheet: /css/main.css?v=1
 
 <h2>Handouts and assignments</h2>
 <ul>
-    <li><a href="syllabus.pdf">Syllabus</a>
+    <li><a href="handout/syllabus.pdf">Syllabus</a>
 <!--
     <li><a href="project.pdf">Class Project</a>
     <li><a href="nltk-tutorial.pdf">Tutorial: Computing Word Frequencies in Python</a>
@@ -74,14 +74,14 @@ to take the course.
   <li>Cluaset, Shalizi, and Newman (2009), <a href="Clau09.pdf">Power-law
       distributions in empirical data</a>.
 -->
-  <li>Mosteller and Wallace (1963), <a href="Most63.pdf">Inference in an
+  <li>Mosteller and Wallace (1963), <a href="reading/Most63.pdf">Inference in an
       authorship problem</a>.
 </ul>
 
 
 <h2>Datasets</h2>
 <ul>
-    <li><a href="federalist.json"><cite>The Federalist</cite> Papers (federalist.json)</a>
+  <li><a href="data/federalist.json">The Federalist Papers (federalist.json)</a>
 </ul>
 
 
