update ssd style

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -1,10 +1,18 @@
 ---
 layout: default
 title: Statistics for Social Data
-stylesheet: /css/main.css?v=1
+stylesheet: style.css?v=1
 ---
 <main class="wrapper">
+<div style="max-width: 600px; margin: 0 auto">
 <h1>Statistics for Social Data</h1>
+
+<h2>Course staff</h2>
+<dl>
+  <dt>Instructor</dt>
+  <dd>Prof. Perry (pperry@stern.nyu.edu)</dd>
+  <dd>Office Hours: Thursday, 2:00PM-3:50PM, KMC 8-63</dd>
+</dl>
 
 <h2>Handouts and assignments</h2>
 <ul>
@@ -18,11 +26,13 @@ stylesheet: /css/main.css?v=1
 
 <h2>Information for non-Stern students</h2>
 
+<p>
 Due to school regulations, non-Stern students need consent from the instructor
 to enroll in this course. I am happy to provide this consent. If you are a
 non-Stern student, please send me an e-mail (pperry@stern.nyu.edu) with a few
 sentences describing your prerequisite experience and your reasons for wanting
 to take the course.
+</p>
 
 <h2>Readings</h2>
 <ul>
@@ -84,5 +94,5 @@ to take the course.
   <li><a href="data/federalist.json">The Federalist Papers (federalist.json)</a>
 </ul>
 
-
+</div>
 </main>
