update SSD homepage with first lecture notes and assignment

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -14,16 +14,30 @@ stylesheet: style.css?v=1
   <dd>Office Hours: Thursday, 2:00PM-3:50PM, KMC 8-63</dd>
 </dl>
 
+
+<h2>Lecture slides</h2>
+<ul>
+    <li>
+      <a href="lecture/federalist.html">Case Study: The Federalist Papers</a>
+    (<a href="lecture/federalist.Rmd">Rmd</a>; <a href="code/nbinom.R">nbinom.R</a>)
+</ul>
+
+
 <h2>Handouts and assignments</h2>
 <ul>
     <li><a href="handout/syllabus.pdf">Syllabus</a>
+    <li><a href="hw/hw01.pdf">Homework 1</a>
+    <ul>
+        <li><a href="hw/hw01.Rmd">hw01.Rmd</a>
+        <li><a href="data/federalist.json">federalist.json</a>
+    </ul>
 <!--
     <li><a href="project.pdf">Class Project</a>
     <li><a href="nltk-tutorial.pdf">Tutorial: Computing Word Frequencies in Python</a>
-    <li><a href="hw1.pdf">Homework #1</a>
 -->
 </ul>
 
+<!--
 <h2>Information for non-Stern students</h2>
 
 <p>
@@ -33,6 +47,7 @@ non-Stern student, please send me an e-mail (pperry@stern.nyu.edu) with a few
 sentences describing your prerequisite experience and your reasons for wanting
 to take the course.
 </p>
+-->
 
 <h2>Readings</h2>
 <ul>
