--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -99,8 +99,12 @@ to take the course.
   <li>Cluaset, Shalizi, and Newman (2009), <a href="Clau09.pdf">Power-law
       distributions in empirical data</a>.
 -->
-  <li>Mosteller and Wallace (1963), <a href="reading/Most63.pdf">Inference in an
-      authorship problem</a>.
+  <li>Read, Dridan, Oepen, and Solberg (2012),
+    <a href="reading/Read12.pdf">Sentence boundary detection: A long solved problem?</a>
+  <li>Kiss and Strunk (2006),
+    <a href="reading/Kiss06.pdf">Unsupervised multilingual sentence boundary detection</a>.
+  <li>Mosteller and Wallace (1963),
+    <a href="reading/Most63.pdf">Inference in an authorship problem</a>.
 </ul>
 
 
