--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -99,6 +99,8 @@ to take the course.
   <li>Cluaset, Shalizi, and Newman (2009), <a href="Clau09.pdf">Power-law
       distributions in empirical data</a>.
 -->
+  <li>Sliusarenko and Dyomkin (2014),
+    <a href=http://tech.grammarly.com/blog/posts/How-to-Split-Sentences.html">How to split sentences</a>.
   <li>Read, Dridan, Oepen, and Solberg (2012),
     <a href="reading/Read12.pdf">Sentence boundary detection: A long solved problem?</a>
   <li>Kiss and Strunk (2006),
