--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -19,7 +19,10 @@ stylesheet: style.css?v=1
 <ul>
     <li>
       <a href="lecture/federalist.html">Case Study: The Federalist Papers</a>
-    (<a href="lecture/federalist.Rmd">Rmd</a>; <a href="code/nbinom.R">nbinom.R</a>)
+      (<a href="lecture/federalist.Rmd">Rmd</a>; <a href="code/nbinom.R">nbinom.R</a>)
+    <li>
+      <a href="lecture/segment.html">Segmenting Text</a>
+      (<a href="lecture/segment.Rmd">Rmd</a>)
 </ul>
 
 
