--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -34,6 +34,10 @@ stylesheet: style.css?v=1
         <li><a href="hw/hw01.Rmd">hw01.Rmd</a>
         <li><a href="data/federalist.json">federalist.json</a>
     </ul>
+    <li><a href="hw/hw02.pdf">Homework 2</a>
+    <ul>
+        <li><a href="data/anc-masc.json">anc-masc.json</a>
+    </ul>
 <!--
     <li><a href="project.pdf">Class Project</a>
     <li><a href="nltk-tutorial.pdf">Tutorial: Computing Word Frequencies in Python</a>
@@ -116,6 +120,7 @@ to take the course.
 <h2>Datasets</h2>
 <ul>
   <li><a href="data/federalist.json">The Federalist Papers (federalist.json)</a>
+  <li><a href="data/anc-masc.json">The American National Corpus, Manually Annotated Sub-Corpus (anc-masc.json)</a>
 </ul>
 
 </div>
