add jurafsky martin refs

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -106,6 +106,11 @@ to take the course.
   <li>Cluaset, Shalizi, and Newman (2009), <a href="Clau09.pdf">Power-law
       distributions in empirical data</a>.
 -->
+  <li>Jurafsky and Martin (2015), Speeach and Language Processing (3rd ed.  draft):
+    <ul>
+      <li><a href="https://web.stanford.edu/~jurafsky/slp3/8.pdf">Chapter 8: Hidden Markov Models</a>
+      <li><a href="https://web.stanford.edu/~jurafsky/slp3/9.pdf">Chapter 9: Part-of-Speech Tagging</a>
+    </ul>
   <li>Sliusarenko and Dyomkin (2014),
     <a href="http://tech.grammarly.com/blog/posts/How-to-Split-Sentences.html">How to split sentences</a>.
   <li>Read, Dridan, Oepen, and Solberg (2012),
