--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -126,6 +126,9 @@ to take the course.
 <ul>
   <li><a href="data/federalist.json">The Federalist Papers (federalist.json)</a>
   <li><a href="data/anc-masc.json">The American National Corpus, Manually Annotated Sub-Corpus (anc-masc.json)</a>
+    <ul>
+      <li><a href="data/anc-masc-s.json">Sentence Boundaries (anc-masc-s.json)</a>
+    </ul>
 </ul>
 
 </div>
