--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -23,6 +23,9 @@ stylesheet: style.css?v=1
     <li>
       <a href="lecture/segment.html">Segmenting Text</a>
       (<a href="lecture/segment.Rmd">Rmd</a>)
+    <li>
+      <a href="lecture/postag.html">Part-of-Speech Tagging</a>
+      (<a href="lecture/postag.Rmd">Rmd</a>)
 </ul>
 
 
@@ -38,10 +41,7 @@ stylesheet: style.css?v=1
     <ul>
         <li><a href="data/anc-masc.json">anc-masc.json</a>
     </ul>
-<!--
-    <li><a href="project.pdf">Class Project</a>
-    <li><a href="nltk-tutorial.pdf">Tutorial: Computing Word Frequencies in Python</a>
--->
+    <li><a href="hw/hw03.pdf">Homework 3</a>
 </ul>
 
 <!--
