add yelp processing scripts

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -129,6 +129,11 @@ to take the course.
     <ul>
       <li><a href="data/anc-masc-s.json">Sentence Boundaries (anc-masc-s.json)</a>
     </ul>
+    <li><a href="http://www.yelp.com/academic_dataset">Yelp Academic Dataset</a>
+    <ul>
+      <li><a href="data/yelp-academic/01_make_json.py">01_make_json.py</a>
+      <li><a href="data/yelp-academic/02_subset_nyc.py">02_subset_nyc.py</a>
+    </ul>
 </ul>
 
 </div>
