add lecture materials

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -29,6 +29,9 @@ stylesheet: style.css?v=1
   <li>
     <a href="lecture/postag.html">Part-of-Speech Tagging</a>
     (<a href="lecture/postag.Rmd">Rmd</a>)
+  <li>
+    <a href="lecture/decomp.html">Matrix Decompositions</a>
+    (<a href="lecture/decomp.Rmd">Rmd</a>)
 </ul>
 
 
@@ -103,6 +106,7 @@ to take the course.
       modeling</a>.
   <li>Blei, Ng, and Jordan (2003), <a href="Blei03.pdf">Latent dirichlet
       allocation</a>.
+-->
   <li>Lee and Seung (1999), <a href="Lee99.pdf">Learning the parts of
       objects by non-negative matrix factorization</a>.
   <li>Kolda and O'Leary (1998) <a href="Kold98.pdf">A Semidiscrete matrix
@@ -110,6 +114,7 @@ to take the course.
   <li>Manning, Raghavan, and Sch&uuml;tze (2008), <a href="Mann08Ch18.pdf">
       Matrix Decompositions and Latent Semantic Indexing</a>.  Chapter 18
       from <cite>Introduction to Information Retrieval</cite>.
+<!--
   <li>Cluaset, Shalizi, and Newman (2009), <a href="Clau09.pdf">Power-law
       distributions in empirical data</a>.
 -->
@@ -148,6 +153,7 @@ to take the course.
       <li><a href="data/yelp-academic/01_make_json.py">01_make_json.py</a>
       <li><a href="data/yelp-academic/02_subset_nyc.py">02_subset_nyc.py</a>
     </ul>
+  <li><a href="data/classic3.json">SMART Classic3 Corpus (classic3.json)</a>
 </ul>
 
 </div>
