add hw4, update rading

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -52,6 +52,7 @@ stylesheet: style.css?v=1
       <li><a href="data/yelp-academic/01_make_json.py">01_make_json.py</a>
       <li><a href="data/yelp-academic/02_subset_nyc.py">02_subset_nyc.py</a>
     </ul>
+  <li><a href="hw/hw04.pdf">Homework 4</a>
 </ul>
 
 <!--
@@ -104,14 +105,14 @@ to take the course.
       <cite>Web Data Mining</cite>.
   <li>Goodman (2001), <a href="Good01.pdf">A bit of progress in language
       modeling</a>.
-  <li>Blei, Ng, and Jordan (2003), <a href="Blei03.pdf">Latent dirichlet
-      allocation</a>.
 -->
-  <li>Lee and Seung (1999), <a href="Lee99.pdf">Learning the parts of
+  <li>Blei, Ng, and Jordan (2003), <a href="reading/Blei03.pdf">Latent dirichlet
+      allocation</a>.
+  <li>Lee and Seung (1999), <a href="reading/Lee99.pdf">Learning the parts of
       objects by non-negative matrix factorization</a>.
-  <li>Kolda and O'Leary (1998) <a href="Kold98.pdf">A Semidiscrete matrix
+  <li>Kolda and O'Leary (1998) <a href="reading/Kold98.pdf">A Semidiscrete matrix
       decomposition for latent semantic indexing in information retrieval</a>.
-  <li>Manning, Raghavan, and Sch&uuml;tze (2008), <a href="Mann08Ch18.pdf">
+  <li>Manning, Raghavan, and Sch&uuml;tze (2008), <a href="reading/Mann08Ch18.pdf">
       Matrix Decompositions and Latent Semantic Indexing</a>.  Chapter 18
       from <cite>Introduction to Information Retrieval</cite>.
 <!--
