--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -32,6 +32,9 @@ stylesheet: style.css?v=1
   <li>
     <a href="lecture/decomp.html">Matrix Decompositions</a>
     (<a href="lecture/decomp.Rmd">Rmd</a>)
+  <li>
+    <a href="lecture/topic.html">Topic Models</a>
+    (<a href="lecture/topic.Rmd">Rmd</a>)
 </ul>
 
 
@@ -53,6 +56,7 @@ stylesheet: style.css?v=1
       <li><a href="data/yelp-academic/02_subset_nyc.py">02_subset_nyc.py</a>
     </ul>
   <li><a href="hw/hw04.pdf">Homework 4</a>
+  <li><a href="hw/hw05.pdf">Homework 5</a>
 </ul>
 
 <!--
@@ -106,6 +110,8 @@ to take the course.
   <li>Goodman (2001), <a href="Good01.pdf">A bit of progress in language
       modeling</a>.
 -->
+  <li>Mikolov, Sutskever, Chen, Corrado, and Dean (2013), <a href="reading/Miko13.pdf">Distributed representations of words and phrases and their compositionality</a>.
+    <li>Levy and Goldberg (2014), <a href="reading/Levy14.pdf">Neural word embedding as implicit matrix factorization</a>.
   <li>Blei, Ng, and Jordan (2003), <a href="reading/Blei03.pdf">Latent dirichlet
       allocation</a>.
   <li>Lee and Seung (1999), <a href="reading/Lee99.pdf">Learning the parts of
