add link to reading

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -110,6 +110,8 @@ to take the course.
   <li>Goodman (2001), <a href="Good01.pdf">A bit of progress in language
       modeling</a>.
 -->
+  <li>Chen, Lin, and Zhou (2015), <a href="http://jmlr.org/papers/volume16/chen15a/chen15a.pdf">
+      Statistical decision making for optimal budget allocation in crowd labeling</a>
   <li>Mikolov, Sutskever, Chen, Corrado, and Dean (2013), <a href="reading/Miko13.pdf">Distributed representations of words and phrases and their compositionality</a>.
     <li>Levy and Goldberg (2014), <a href="reading/Levy14.pdf">Neural word embedding as implicit matrix factorization</a>.
   <li>Blei, Ng, and Jordan (2003), <a href="reading/Blei03.pdf">Latent dirichlet
