add link to word2vec tutorial

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -110,42 +110,43 @@ to take the course.
   <li>Goodman (2001), <a href="Good01.pdf">A bit of progress in language
       modeling</a>.
 -->
-  <li>Chen, Lin, and Zhou (2015), <a href="http://jmlr.org/papers/volume16/chen15a/chen15a.pdf">
-      Statistical decision making for optimal budget allocation in crowd labeling</a>
-  <li>Mikolov, Sutskever, Chen, Corrado, and Dean (2013), <a href="reading/Miko13.pdf">Distributed representations of words and phrases and their compositionality</a>.
-    <li>Levy and Goldberg (2014), <a href="reading/Levy14.pdf">Neural word embedding as implicit matrix factorization</a>.
-  <li>Blei, Ng, and Jordan (2003), <a href="reading/Blei03.pdf">Latent dirichlet
+  <li>Chen, Lin, and Zhou (2015). <a href="http://jmlr.org/papers/volume16/chen15a/chen15a.pdf">
+      Statistical decision making for optimal budget allocation in crowd labeling</a>.
+  <li>&#344;eh&#367;&#345;ek (2014). <a href="http://rare-technologies.com/word2vec-tutorial/">Word2vec tutorial</a>.
+  <li>Mikolov, Sutskever, Chen, Corrado, and Dean (2013). <a href="reading/Miko13.pdf">Distributed representations of words and phrases and their compositionality</a>.
+  <li>Levy and Goldberg (2014). <a href="reading/Levy14.pdf">Neural word embedding as implicit matrix factorization</a>.
+  <li>Blei, Ng, and Jordan (2003). <a href="reading/Blei03.pdf">Latent dirichlet
       allocation</a>.
-  <li>Lee and Seung (1999), <a href="reading/Lee99.pdf">Learning the parts of
+  <li>Lee and Seung (1999). <a href="reading/Lee99.pdf">Learning the parts of
       objects by non-negative matrix factorization</a>.
-  <li>Kolda and O'Leary (1998) <a href="reading/Kold98.pdf">A Semidiscrete matrix
+  <li>Kolda and O'Leary (1998). <a href="reading/Kold98.pdf">A Semidiscrete matrix
       decomposition for latent semantic indexing in information retrieval</a>.
-  <li>Manning, Raghavan, and Sch&uuml;tze (2008), <a href="reading/Mann08Ch18.pdf">
+  <li>Manning, Raghavan, and Sch&uuml;tze (2008). <a href="reading/Mann08Ch18.pdf">
       Matrix Decompositions and Latent Semantic Indexing</a>.  Chapter 18
       from <cite>Introduction to Information Retrieval</cite>.
 <!--
-  <li>Cluaset, Shalizi, and Newman (2009), <a href="Clau09.pdf">Power-law
+  <li>Cluaset, Shalizi, and Newman (2009). <a href="Clau09.pdf">Power-law
       distributions in empirical data</a>.
 -->
-  <li>Honnibal (2013),
+  <li>Honnibal (2013).
     <a href="https://spacy.io/blog/part-of-speech-POS-tagger-in-python">A Good Part-of-Speech Tagger in about 200 Lines of Python</a>.
   <li>Gimpel, Schneider, O'Connor, Das, Mills, Eisenstein, Heilman, Yogatama,
-  Flanigan, and Smith (2011), <a href="http://www.cs.cmu.edu/~ark/TweetNLP/gimpel+etal.acl11.pdf">Part-of-Speech Tagging for Twitter: Annotation, Features, and Experiments</a>.
+  Flanigan, and Smith (2011). <a href="http://www.cs.cmu.edu/~ark/TweetNLP/gimpel+etal.acl11.pdf">Part-of-Speech Tagging for Twitter: Annotation, Features, and Experiments</a>.
     <ul>
       <li><a href="http://www.cs.cmu.edu/~ark/TweetNLP/">Webpage, with links to software and training data</a>
     </ul>
-  <li>Jurafsky and Martin (2015), Speeach and Language Processing (3rd ed.  draft):
+  <li>Jurafsky and Martin (2015). Speeach and Language Processing (3rd ed.  draft):
     <ul>
       <li><a href="https://web.stanford.edu/~jurafsky/slp3/8.pdf">Chapter 8: Hidden Markov Models</a>
       <li><a href="https://web.stanford.edu/~jurafsky/slp3/9.pdf">Chapter 9: Part-of-Speech Tagging</a>
     </ul>
-  <li>Sliusarenko and Dyomkin (2014),
+  <li>Sliusarenko and Dyomkin (2014).
     <a href="http://tech.grammarly.com/blog/posts/How-to-Split-Sentences.html">How to split sentences</a>.
-  <li>Read, Dridan, Oepen, and Solberg (2012),
+  <li>Read, Dridan, Oepen, and Solberg (2012).
     <a href="reading/Read12.pdf">Sentence boundary detection: A long solved problem?</a>
-  <li>Kiss and Strunk (2006),
+  <li>Kiss and Strunk (2006).
     <a href="reading/Kiss06.pdf">Unsupervised multilingual sentence boundary detection</a>.
-  <li>Mosteller and Wallace (1963),
+  <li>Mosteller and Wallace (1963).
     <a href="reading/Most63.pdf">Inference in an authorship problem</a>.
 </ul>
 
