add lecture slides; update readings

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -35,6 +35,14 @@ stylesheet: style.css?v=1
   <li>
     <a href="lecture/topic.html">Topic Models</a>
     (<a href="lecture/topic.Rmd">Rmd</a>)
+  <li>
+    <a href="lecture/sentiment.html">Sentiment Analysis</a>
+    (<a href="lecture/sentiment.Rmd">Rmd</a>)
+    <ul>
+      <li><a href="data/GOP_REL_ONLY.csv">GOP_REL_ONLY.csv</a>
+      <li><a href="data/negative-words.txt">negative-words.txt</a>
+      <li><a href="data/positive-words.txt">positive-words.txt</a>
+    </ul>
 </ul>
 
 
@@ -100,13 +108,15 @@ to take the course.
       adolescent social networks</a>.
   <li>Handcock et al. (2007), <a href="Hand07.pdf">Model-based clustering for
       social networks</a>.
-  <li>Robins et al. (2007), <a href="Robi07a.pdf">An introduction to
+-->
+  <li>Robins et al. (2007), <a href="reading/Robi07a.pdf">An introduction to
       exponential random graph (p-star) models for social networks</a>.
-  <li>Robins et al. (2007), <a href="Robi07b.pdf">Recent developments in
+  <li>Robins et al. (2007), <a href="reading/Robi07b.pdf">Recent developments in
       exponential random graph (p-star) models for social networks</a>.
   <li>Liu (2011), <a href="http://www.cs.uic.edu/~liub/WebMiningBook.html">
       Opinion Mining and Sentiment Analysis</a>.  Chapter 11 from
       <cite>Web Data Mining</cite>.
+<!--
   <li>Goodman (2001), <a href="Good01.pdf">A bit of progress in language
       modeling</a>.
 -->
