--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -43,6 +43,9 @@ stylesheet: style.css?v=1
       <li><a href="data/negative-words.txt">negative-words.txt</a>
       <li><a href="data/positive-words.txt">positive-words.txt</a>
     </ul>
+  <li>
+    <a href="lecture/ergm.html">Exponential Random Graph Models</a>
+    (<a href="lecture/ergm.Rmd">Rmd</a>)
 </ul>
 
 
