add hw, reading

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -68,6 +68,7 @@ stylesheet: style.css?v=1
     </ul>
   <li><a href="hw/hw04.pdf">Homework 4</a>
   <li><a href="hw/hw05.pdf">Homework 5</a>
+  <li><a href="hw/hw06.pdf">Homework 6</a>
 </ul>
 
 <!--
@@ -109,9 +110,8 @@ to take the course.
   <li>Goodreau et al. (2009), <a href="Good09.pdf">Birds of a feather, or
       friend of a friend? Using exponential random graph models to investigate
       adolescent social networks</a>.
-  <li>Handcock et al. (2007), <a href="Hand07.pdf">Model-based clustering for
-      social networks</a>.
 -->
+  <li>Handcock et al. (2007), <a href="reading/Hand07.pdf">Model-based clustering for social networks</a>.
   <li>Robins et al. (2007), <a href="reading/Robi07a.pdf">An introduction to
       exponential random graph (p-star) models for social networks</a>.
   <li>Robins et al. (2007), <a href="reading/Robi07b.pdf">Recent developments in
