add latentnet lecture notes

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -46,6 +46,9 @@ stylesheet: style.css?v=1
   <li>
     <a href="lecture/ergm.html">Exponential Random Graph Models</a>
     (<a href="lecture/ergm.Rmd">Rmd</a>)
+  <li>
+    <a href="lecture/latentnet.html">Latent Space Network Models</a>
+    (<a href="lecture/latentnet.Rmd">Rmd</a>)
 </ul>
 
 
