--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -72,6 +72,7 @@ stylesheet: style.css?v=1
   <li><a href="hw/hw04.pdf">Homework 4</a>
   <li><a href="hw/hw05.pdf">Homework 5</a>
   <li><a href="hw/hw06.pdf">Homework 6</a>
+  <li><a href="hw/hw07.pdf">Homework 7</a>
 </ul>
 
 <!--
@@ -89,7 +90,7 @@ to take the course.
 <h2>Readings</h2>
 <ul>
 <!--
-  <li> Perry and Wolfe (2013), <a href="Perr13.pdf">Point process modelling
+  <li>Perry and Wolfe (2013), <a href="Perr13.pdf">Point process modelling
       for directed interaction networks</a>.
   <li>Shalizi and Thomas (2011), <a href="Shal11.pdf">Homophily and contagion
       are generically confounded in observational social network studies</a>.
@@ -103,10 +104,12 @@ to take the course.
       actor-based models for network dynamics</a>.
   <li>Mercken at al. (2010), <a href="Merc10.pdf">Dynamics of adolescent
       friendship networks and smoking behavior</a>.
+-->
   <li>Newman (2006), <a href="Newm06.pdf">Finding community structure in
       networks using the eigenvalues of matrices</a>.
   <li>Bickel and Chen (2009), <a href="Bick09.pdf">A nonparametric view of
       network models and Newman-Girvan and other modularities</a>.
+<!--
   <li>Currarini et al. (2009), <a href="Curr09.pdf">Identifying the roles of
       race-based choice and chance in high school friendship network
       formation</a>.
