fix broken links

--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -105,9 +105,9 @@ to take the course.
   <li>Mercken at al. (2010), <a href="Merc10.pdf">Dynamics of adolescent
       friendship networks and smoking behavior</a>.
 -->
-  <li>Newman (2006), <a href="Newm06.pdf">Finding community structure in
+  <li>Newman (2006), <a href="reading/Newm06.pdf">Finding community structure in
       networks using the eigenvalues of matrices</a>.
-  <li>Bickel and Chen (2009), <a href="Bick09.pdf">A nonparametric view of
+  <li>Bickel and Chen (2009), <a href="reading/Bick09.pdf">A nonparametric view of
       network models and Newman-Girvan and other modularities</a>.
 <!--
   <li>Currarini et al. (2009), <a href="Curr09.pdf">Identifying the roles of
