--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -49,6 +49,9 @@ stylesheet: style.css?v=1
   <li>
     <a href="lecture/latentnet.html">Latent Space Network Models</a>
     (<a href="lecture/latentnet.Rmd">Rmd</a>)
+  <li>
+    <a href="lecture/community.html">Network Clustering (Community Detection)</a>
+    (<a href="lecture/community.Rmd">Rmd</a>)
 </ul>
 
 
@@ -73,6 +76,11 @@ stylesheet: style.css?v=1
   <li><a href="hw/hw05.pdf">Homework 5</a>
   <li><a href="hw/hw06.pdf">Homework 6</a>
   <li><a href="hw/hw07.pdf">Homework 7</a>
+  <li><a href="hw/hw08.pdf">Homework 8</a>
+    <ul>
+      <li><a href="hw/hw08.Rmd">hw08.Rmd</a>
+      <li><a href="data/wikipedia.gml">wikipedia.gml</a>
+    </ul>
 </ul>
 
 <!--
