--- a/course/ssd/index.html
+++ b/course/ssd/index.html
@@ -98,21 +98,21 @@ to take the course.
 <h2>Readings</h2>
 <ul>
 <!--
-  <li>Perry and Wolfe (2013), <a href="Perr13.pdf">Point process modelling
-      for directed interaction networks</a>.
   <li>Shalizi and Thomas (2011), <a href="Shal11.pdf">Homophily and contagion
       are generically confounded in observational social network studies</a>.
-  <li>Aral and Walker (2012), <a href="Aral12.pdf">Identifying influential and
-      susceptible members of social networks</a>.
-      <ul>
-          <li> <a href="Aral12S.pdf">Supplementary Material</a>
-          <li> <a href="Aral12.mp3">Interview with Aral (mp3)</a>
-      </ul>
   <li>Snijders at al. (2010), <a href="Snij10.pdf">Introduction to stochastic
       actor-based models for network dynamics</a>.
   <li>Mercken at al. (2010), <a href="Merc10.pdf">Dynamics of adolescent
       friendship networks and smoking behavior</a>.
 -->
+  <li>Perry and Wolfe (2013), <a href="reading/Perr13.pdf">Point process modelling
+      for directed interaction networks</a>.
+  <li>Aral and Walker (2012), <a href="reading/Aral12.pdf">Identifying influential and
+      susceptible members of social networks</a>.
+      <ul>
+          <li> <a href="reading/Aral12S.pdf">Supplementary Material</a>
+          <li> <a href="reading/Aral12.mp3">Interview with Aral (mp3)</a>
+      </ul>
   <li>Newman (2006), <a href="reading/Newm06.pdf">Finding community structure in
       networks using the eigenvalues of matrices</a>.
   <li>Bickel and Chen (2009), <a href="reading/Bick09.pdf">A nonparametric view of
