--- a/reports/index.html
+++ b/reports/index.html
@@ -18,6 +18,9 @@ title: Patrick O. Perry - Reports
       <a href="http://arxiv.org/abs/1310.7269">Degrees of freedom for combining regression with factor analysis</a>.
       With N. S. Pillai.
       Submitted.
+      <ul>
+        <li>Code to Reproduce Figures: <a href="latentdf/latentdf-sources.tar.gz">latentdf-sources.tar.gz</a>
+      </ul>
     </li>
 
     <li>
