--- a/courses/index.html
+++ b/courses/index.html
@@ -29,7 +29,15 @@ title: Patrick O. Perry - Courses
     </dd>
 
     <dt>
-    <a href="/course/cor1305">Statistics and Data Analysis (MBA)</a>
+    <a href="/course/cor1305">Statistics and Data Analysis (Full-time MBA)</a>
+    </dt>
+    <dd>
+      Fundamental notions of data presentation and data analysis; using statistical thinking
+      in the context of business problems.
+    </dd>
+
+    <dt>
+    <a href="/course/langone">Statistics and Data Analysis (Part-time MBA)</a>
     </dt>
     <dd>
       Fundamental notions of data presentation and data analysis; using statistical thinking
