--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -39,6 +39,7 @@ stylesheet: /css/main.css?v=1
 <h2>Handouts and Assignments</h2>
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
+  <li><a href="https://goo.gl/forms/ZRwpMmGr44IcoExW2">Class Survey</a>
 <!--
   <li><a href="http://goo.gl/hs16Kk">Class Survey</a>
   <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
