add descriptive statistics handout

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -25,6 +25,8 @@ stylesheet: /css/main.css?v=1
 <ul>
   <li><a href="lecture/populations.pdf">Sep 6 - Populations and Samples</a>
     (<a href="lecture/populations-sol.pdf">Solutions</a>)
+  <li><a href="lecture/descrip.pdf">Sep 8 - Descriptive Statistics</a>
+    (<a href="lecture/descrip-sol.pdf">Solutions</a>)
 </ul>
 
 
