Add hw, minitab handout

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -40,17 +40,15 @@ stylesheet: /css/main.css?v=1
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
   <li><a href="https://goo.gl/forms/ZRwpMmGr44IcoExW2">Class Survey</a>
-<!--
-  <li><a href="http://goo.gl/hs16Kk">Class Survey</a>
   <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
-  <li><a href="hw/hw01.pdf">Homework 1</a>
-    (<a href="hw/hw01sol.pdf">Solutions</a>)
+  <li><a href="hw/hw01.pdf">Homework 1</a> (Due Sep 15)
     <ul>
       <li><a href="data/CelebrityEarnings.CSV">CelebrityEarnings.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
+<!--
   <li><a href="hw/hw02.pdf">Homework 2</a>
     (<a href="hw/hw02sol.pdf">Solutions</a>)
   <li><a href="hw/hw03.pdf">Homework 3</a>
