--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -27,6 +27,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/populations-sol.pdf">Solutions</a>)
   <li><a href="lecture/descrip.pdf">Sep 8 - Descriptive Statistics</a>
     (<a href="lecture/descrip-sol.pdf">Solutions</a>)
+  <li><a href="lecture/prob.pdf">Sep 13 - Probability</a>
+    (<a href="lecture/prob-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -34,6 +36,7 @@ stylesheet: /css/main.css?v=1
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/da8b155ea1744890be5a78163771cefb1d">Sep 13</a>
 </ul>
 
 
