--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -29,6 +29,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/descrip-sol.pdf">Solutions</a>)
   <li><a href="lecture/prob.pdf">Sep 13 - Probability</a>
     (<a href="lecture/prob-sol.pdf">Solutions</a>)
+  <li><a href="lecture/cond-prob-1.pdf">Sep 15 - Conditional Probability 1</a>
+    (<a href="lecture/cond-prob-1-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -37,6 +39,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/da8b155ea1744890be5a78163771cefb1d">Sep 13</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/39090894fa1949f48e550dc7309041d91d">Sep 15</a>
 </ul>
 
 
@@ -52,9 +55,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
+  <li><a href="hw/hw02.pdf">Homework 2</a> (Due Sep 22)
 <!--
-  <li><a href="hw/hw02.pdf">Homework 2</a>
-    (<a href="hw/hw02sol.pdf">Solutions</a>)
   <li><a href="hw/hw03.pdf">Homework 3</a>
     (<a href="hw/hw03sol.pdf">Solutions</a>)
   <li><a href="hw/hw04.pdf">Homework 4</a>
