add langone course materials

--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -19,7 +19,6 @@ stylesheet: /css/main.css?v=1
   <dd>Office Hours: Tuesday 6:00PM&ndash;8:00PM, KMC 8th floor near mailboxes</dd>
 </dl>
 
-<!--
 
 <h2>Lecture Notes</h2>
 <ul>
@@ -27,6 +26,7 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/sampling-sol.pdf">Solutions</a>)
   <li><a href="lecture/descrip.pdf">Sep 21 (2) - Descriptive Statistics 2</a>
     (<a href="lecture/descrip-sol.pdf">Solutions</a>)
+<!--
   <li><a href="lecture/prob.pdf">Sep 28 (1) - Probability</a>
     (<a href="lecture/prob-sol.pdf">Solutions</a>)
   <li><a href="lecture/cond-prob.pdf">Sep 28 (2) - Conditional Probability</a>
@@ -100,9 +100,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="https://xkcd.com/552/">Correlation vs. Causation</a>
       <li><a href="http://tylervigen.com/spurious-correlations">Spurious Correlations</a>
     </ul>
+-->
 </ul>
 
 
+<!--
 <h2>Lecture Videos</h2>
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3e8eb423ab5e42c595c0a89f0f22ed231d">Sep 21</a>
@@ -124,17 +126,16 @@ stylesheet: /css/main.css?v=1
 <h2>Handouts and Assignments</h2>
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
-  <!--
-  <li><a href="http://goo.gl/hs16Kk">Class Survey</a>
+  <li><a href="https://goo.gl/forms/1mqVpCq1CRb9RbPl1">Class Survey</a>
   <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
-  <li><a href="hw/hw01.pdf">Homework 1</a>
-    (<a href="hw/hw01sol.pdf">Solutions</a>)
+  <li><a href="hw/hw01.pdf">Homework 1</a> (Due Sep. 26)
     <ul>
       <li><a href="data/CelebrityEarnings.CSV">CelebrityEarnings.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
+  <!--
   <li><a href="hw/hw02.pdf">Homework 2</a>
     (<a href="hw/hw02sol.pdf">Solutions</a>)
   <li><a href="hw/hw03.pdf">Homework 3</a>
