--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -31,6 +31,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/prob-sol.pdf">Solutions</a>)
   <li><a href="lecture/cond-prob-1.pdf">Sep 15 - Conditional Probability 1</a>
     (<a href="lecture/cond-prob-1-sol.pdf">Solutions</a>)
+  <li><a href="lecture/cond-prob-2.pdf">Sep 20 - Conditional Probability 2</a>
+    (<a href="lecture/cond-prob-2-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -40,6 +42,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/da8b155ea1744890be5a78163771cefb1d">Sep 13</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/39090894fa1949f48e550dc7309041d91d">Sep 15</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/10e54f71d7ed46d08fa1f5624c2f00d01d">Sep 20</a>
 </ul>
 
 
