update with lecture materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -33,6 +33,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/cond-prob-1-sol.pdf">Solutions</a>)
   <li><a href="lecture/cond-prob-2.pdf">Sep 20 - Conditional Probability 2</a>
     (<a href="lecture/cond-prob-2-sol.pdf">Solutions</a>)
+  <li><a href="lecture/randvar.pdf">Sep 22 - Random Variables</a>
+    (<a href="lecture/randvar-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -43,6 +45,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/da8b155ea1744890be5a78163771cefb1d">Sep 13</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/39090894fa1949f48e550dc7309041d91d">Sep 15</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/10e54f71d7ed46d08fa1f5624c2f00d01d">Sep 20</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ef969ba263dc4fd89c770dfaab97e98c1d">Sep 22</a>
 </ul>
 
 
@@ -59,9 +62,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
   <li><a href="hw/hw02.pdf">Homework 2</a> (Due Sep 22)
+  <li><a href="hw/hw03.pdf">Homework 3</a> (Due Sep 29)
 <!--
-  <li><a href="hw/hw03.pdf">Homework 3</a>
-    (<a href="hw/hw03sol.pdf">Solutions</a>)
   <li><a href="hw/hw04.pdf">Homework 4</a>
     (<a href="hw/hw04sol.pdf">Solutions</a>)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
