update Pauls OH location

--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -16,7 +16,7 @@ stylesheet: /css/main.css?v=1
 
   <dt>Teaching Fellow</dt>
   <dd>Paul Neumaier (pjn222@stern.nyu.edu)</dd>
-  <dd>Office Hours: Tuesday 6:00PM&ndash;8:00PM, KMC 8th floor near mailboxes</dd>
+  <dd>Office Hours: Tuesday 6:00PM&ndash;8:00PM, KMC 8-170 (conference room near mailboxes)</dd>
 </dl>
 
 
