update with langone lecture materials

--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -22,15 +22,15 @@ stylesheet: /css/main.css?v=1
 
 <h2>Lecture Notes</h2>
 <ul>
-  <li><a href="lecture/sampling.pdf">Sep 21 (1) - Sampling / Descriptive Statistics 1</a>
+  <li><a href="lecture/sampling.pdf">Sep 19 (1) - Sampling / Descriptive Statistics 1</a>
     (<a href="lecture/sampling-sol.pdf">Solutions</a>)
-  <li><a href="lecture/descrip.pdf">Sep 21 (2) - Descriptive Statistics 2</a>
+  <li><a href="lecture/descrip.pdf">Sep 19 (2) - Descriptive Statistics 2</a>
     (<a href="lecture/descrip-sol.pdf">Solutions</a>)
-<!--
-  <li><a href="lecture/prob.pdf">Sep 28 (1) - Probability</a>
+  <li><a href="lecture/prob.pdf">Sep 26 (1) - Probability</a>
     (<a href="lecture/prob-sol.pdf">Solutions</a>)
-  <li><a href="lecture/cond-prob.pdf">Sep 28 (2) - Conditional Probability</a>
+  <li><a href="lecture/cond-prob.pdf">Sep 26 (2) - Conditional Probability</a>
     (<a href="lecture/cond-prob-sol.pdf">Solutions</a>)
+<!--
   <li><a href="lecture/randvar.pdf">Oct 5 (1) - Random Variables</a>
     (<a href="lecture/randvar-sol.pdf">Solutions</a>)
   <li><a href="lecture/counts.pdf">Oct 5 (2) - Models for Counts</a>
@@ -107,6 +107,7 @@ stylesheet: /css/main.css?v=1
 <h2>Lecture Videos</h2>
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/18aa77ec38ca433d967e6d827ef6e6f11d">Sep 19</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5e9a6e1216fa4f3682c88fa149b1e0e31d">Sep 26</a>
 </ul>
 
 
@@ -122,9 +123,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
+  <li><a href="hw/hw02.pdf">Homework 2</a> (Due Oct. 10)
   <!--
-  <li><a href="hw/hw02.pdf">Homework 2</a>
-    (<a href="hw/hw02sol.pdf">Solutions</a>)
   <li><a href="hw/hw03.pdf">Homework 3</a>
     (<a href="hw/hw03sol.pdf">Solutions</a>)
   <li><a href="hw/hw04.pdf">Homework 4</a>
